k8s/spark/base/history-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-history-server
  labels:
    app: spark
    component: history-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark
      component: history-server
  template:
    metadata:
      labels:
        app: spark
        component: history-server
    spec:
      serviceAccountName: spark
      imagePullSecrets:
        - name: dockerconfigjson
      containers:
        - name: spark-history-server
          image: ghcr.io/fxttr/spark:latest
          imagePullPolicy: Always
          command: 
            - "start-history-server.sh"
          ports:
            - containerPort: 18080
          resources:
            requests:
              memory: "1Gi"
              cpu: "1"
            limits:
              memory: "4Gi"
              cpu: "2"
          volumeMounts:
            - mountPath: /opt/spark/logs
              name: spark-logs
      volumes:
        - name: spark-logs
          emptyDir: {}
