k8s/spark/base/master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master
  labels:
    app: spark
    component: master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark
      component: master
  template:
    metadata:
      labels:
        app: spark
        component: master
    spec:
      serviceAccountName: spark
      imagePullSecrets:
        - name: dockerconfigjson
      securityContext:
        runAsNonRoot: true
        runAsUser: 185
        runAsGroup: 185
        seccompProfile:
          type: "RuntimeDefault"
      containers:
        - name: spark-master
          image: ghcr.io/fxttr/spark:latest
          imagePullPolicy: Always
          command: ["start-master.sh"]
          ports:
            - containerPort: 7077
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: "4Gi"
              cpu: "2"
          volumeMounts:
            - mountPath: /opt/spark/logs
              name: spark-logs
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
        - name: spark-history-server
          image: ghcr.io/fxttr/spark:latest
          imagePullPolicy: Always
          command: 
            - "start-history-server.sh"
          ports:
            - containerPort: 18080
          resources:
            limits:
              memory: "4Gi"
              cpu: "2"
          volumeMounts:
            - mountPath: /opt/spark/logs
              name: spark-logs
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: spark-logs
          emptyDir: {}
