k8s/spark/base/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker
  labels:
    app: spark
    component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark
      component: worker
  template:
    metadata:
      labels:
        app: spark
        component: worker
    spec:
      serviceAccountName: spark
      imagePullSecrets:
        - name: dockerconfigjson
      securityContext:
        runAsNonRoot: true
        runAsUser: 185
        runAsGroup: 185
        seccompProfile:
          type: "RuntimeDefault"
      containers:
        - name: spark-worker
          image: ghcr.io/fxttr/spark:latest
          imagePullPolicy: Always
          command:
            - bash
            - -c
          args: [ "start-worker.sh spark://spark-master:7077 --webui-port 8001" ]
          ports:
            - containerPort: 8081
              protocol: TCP
          resources:
            requests:
              memory: "4Gi"
              cpu: "2"
            limits:
              memory: "8Gi"
              cpu: "4"
          volumeMounts:
            - mountPath: /opt/spark/logs
              name: spark-logs
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: spark-logs
          emptyDir: {}
