k8s/spark/base/history-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-history-server
  labels:
    app: spark
spec:
  ports:
    - port: 18080
      name: history-server-ui
  selector:
    app: spark
    component: history-server
  type: LoadBalancer
