k8s/spark/base/master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-master
  labels:
    app: spark
spec:
  ports:
    - port: 7077
      name: spark-master
    - port: 8080
      name: spark-ui
  selector:
    app: spark
    component: master
  clusterIP: None # Headless service for easier resolution
