k8s/spark/base/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-worker
  labels:
    app: spark
spec:
  ports:
    - port: 8081
      name: spark-ui
  selector:
    app: spark
    component: worker
